# Mattermost-Subscriptions

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENCE  README.md  manage.py  requirements.txt  setup.cfg
apps/account/gql/: mutations.py  queries.py  types.py
apps/chat/gql/: mutations.py  queries.py  subscriptions.py  types.py
helpers/channels_graphql_ws/: __init__.py  client.py  graphql_ws_consumer.py  serializer.py  subscription.py  testing.py  transport.py
helpers/generic_types/: __init__.py
helpers/http_code/: __init__.py
helpers/mattermostproxydriver/: admin.py  user.py
mattermostsub/: asgi.py  consumers.py  middlewares.py  schema.py  settings.py  urls.py  wsgi.py
systemd/: mattermostsub-ws.service  mattermostsub-ws.socket
tester/: README.md  graphql-websocket-client.js
