[bumpversion]
current_version = 1.0.0
commit = False
tag = False

[metadata]
name = mattermost-subscriptions
author = Alireza Khabbazan
description = a Django-based chat server integration with Mattermost. Real-time data sync using GraphQL subscriptions.
url = https://github.com/khabbazan
keywords = django, graphql, graphene, websocket, channels, mattermost

[options]
python_requires = >=3.10, <4
install_requires =
	django
	graphene
    channels

[flake8]
ignore = E266, E231, N805, VNE003, A001, A003, B902, B019, B011
exclude = .git,__pycache__,
max-line-length = 170
